tests/fail/elaboration/fun-app/unbound-head-1.snap
stdout = ''
stderr = '''
error: cannot find `f` in scope
  ┌─ tests/fail/elaboration/fun-app/unbound-head-1.fathom:3:1
  │
3 │ f x
  │ ^ unbound name

'''
